# Pastebee

./: .gitignore  Cargo.toml  docker  docker-compose.yml
embeed/: Cargo.toml  Rocket.toml
embeed/src/: embed_id.rs  main.rs
pastebee/: .gitignore  Cargo.toml  Rocket.toml
pastebee/assets/: balls.html  balls.json  cPJUBQd-PNM.html  cPJUBQd-PNM.json  mE-W497W1wY.html
pastebee/assets/watch/: cPJUBQd--PNM.html
pastebee/src/: content.rs  embed_id.rs  embeds.rs  gateway.rs  hex_color.rs  login.rs  main.rs
pastebee/src/embeds/: embed_id.rs  hex_color.rs  mod.rs
pastebee/src/gateway/: auth.rs  password.rs
pastebee/src/login/: auth.rs
pastebee/static/: index.html  login.html
pastebee/static/auth/: login.html  logout.html
pastebee/static/content/: post.html
pastebee/static/embeds/: index.html  noauth.html  post.html
pastebee/static/styles/: styles.css  styles.css.map
pastebee/static/templates/: embed.html.hbs  embedraw.hbs  login.html.hbs  logout.html.hbs
pastebin/: .gitignore  Cargo.toml
pastebin/src/: embed_id.rs  main.rs  paste_id.rs
